Reporting grundlegend umstrukturiert.
- ReportingTypes als reine Datenklassen erstellt.
- ProxyReportingTypes, die die ReportingTypes um das Nachladen von Daten aus der DB erweitern (lazy-loading). Letzteres wird auch von Thymeleaf unterstützt.
- ReportingRepository als Zwischenspeicher für Daten aus der DB.

Obige Strukturen wurden geschaffen für Schule, einzelne Kataloge, Schüler, Lernabschnitte (ohne Leistungsdaten), Lehrer, Klassen, Jahrgänge, GOSt-Laufbahnplanung und GOSt-Kursplanung.

Arbeiten sind aber noch nicht abgeschlossen. Teilweise müssen aber noch ID-Felder durch Katalogeinträge ersetzt werden.